--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <form action="">
         <table>
             <tr>
-                <td>Name  </td> <td><input type="text"></td>
+                <td>Name  </td> <td><input type="text" id="name"></td>
             </tr>
             <tr>
-                <td>Age  </td> <td><input type="number"></td>
+                <td>Age  </td> <td><input type="number" id="age"></td>
             </tr>
             <tr>
                 <td>Course</td>
                 <td>
-                    <select name="" id="">
+                    <select name="" id="course">
                        <option value="">C++</option>
                        <option value="">java</option>
                        <option value="">HTML</option>
@@ -43,18 +43,30 @@
 
             </tr>
             <tr>
-                <td>Email</td> <td><input type="text" name="" id=""></td>
+                <td>Email</td> <td><input type="text" name="" id="email"></td>
             </tr>
 
            <tr>
-            <td><button style="background: cyan;" onclick="" id="display">Save</button></td>
+            <td><button style="background: cyan;" onclick="saveData();" id="display">Save</button></td>
            </tr>
             
         </table>
     </form>
     
    </center>
-   
+   <hr>
+   <center>
+    <table border="2" id="studentTable">
+   <tr >
+    <th>Name</th>
+    <th>Age</th>
+    <th>Course</th>
+    <th>email</th>
+    <th>Action</th>
+   </tr>
+
+   </table>
+   </center>
 
 </body>
 </html>
