--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StudentForm</title>
+  
 </head>
 <body>
 
@@ -13,7 +14,7 @@
 
     </center>
    <center>
-    <form action="">
+    <form action="" onsubmit="saveData(event)">
         <table>
             <tr>
                 <td>Name  </td> <td><input type="text" id="name"></td>
@@ -25,11 +26,11 @@
                 <td>Course</td>
                 <td>
                     <select name="" id="course">
-                       <option value="">C++</option>
-                       <option value="">java</option>
-                       <option value="">HTML</option>
-                       <option value="">CSS</option>
-                       <option value="">JavaScript</option>
+                       <option value="C++">C++</option>
+                       <option value="JAVA">java</option>
+                       <option value="HTML">HTML</option>
+                       <option value="CSS">CSS</option>
+                       <option value="JAVASCRIPT">JavaScript</option>
                     </select>
                 </td>
             </tr>
@@ -37,8 +38,8 @@
                 <td>Gender</td>
 
                 <td>
-                    <input type="radio" name="gender"> Male
-                    <input type="radio" name="gender"> Female
+                    <input type="radio" name="gender" value="Male"> Male
+                    <input type="radio" name="gender" value="Female"> Female
                 </td>
 
             </tr>
@@ -47,7 +48,7 @@
             </tr>
 
            <tr>
-            <td><button style="background: cyan;" onclick="saveData();" id="display">Save</button></td>
+            <td><button type="submit" style="background: cyan;" id="display">Save</button></td>
            </tr>
             
         </table>
@@ -60,13 +61,15 @@
    <tr >
     <th>Name</th>
     <th>Age</th>
+   
     <th>Course</th>
     <th>email</th>
-    <th>Action</th>
+    
    </tr>
 
    </table>
    </center>
+   <script src="script.js"></script>
 
 </body>
 </html>
